Added update buttons

--- a/templates/list_tpl.html
+++ b/templates/list_tpl.html
@@ -11,6 +11,11 @@
 {% for item in items %}
     <li>
         {{ item.description }} - Priority: {{ item.priority }} 
+        <form method="POST" action="/update/{{ item }}">
+	   		{{ form.hidden_tag() }}
+       		{{ form.submit() }}
+ 		</form>
+
     </li>
 {% endfor %}
 </ul>
