Updated update_item to include the UpdatePriorityForm

--- a/templates/update_item.html
+++ b/templates/update_item.html
@@ -1,1 +1,11 @@
+<form method="POST" action="/update/{{ item_name }}">
+	{{ form.hidden_tag() }}
+	{{ form.new_priority.label }} {{ form.new_priority() }}
+	{{ form.submit() }}
+</form>
 
+<div>
+{% for message in get_flashed_messages() %}
+{{ message }}
+{% endfor %}
+</div>
