Added updates to update_item.html

--- a/templates/list_tpl.html
+++ b/templates/list_tpl.html
@@ -11,7 +11,7 @@
 {% for item in items %}
     <li>
         {{ item.description }} - Priority: {{ item.priority }} 
-        <form method="POST" action="/update/{{ item }}">
+        <form method="POST" action="/update/{{ item.id }}">
 	   		{{ form.hidden_tag() }}
        		{{ form.submit() }}
  		</form>
